--- a/src/components/SignUp/signup.css
+++ b/src/components/SignUp/signup.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 .sign-container{
-    background-image: url('./court.jpg');
+    background-image: url('../Login/court.jpeg');
+    background-size: cover;
+    background-position: center;
     height: 100vh;
     background-size: cover;
     display: flex;
