--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,58 @@
     font-size: 20px;
     font-weight: bold;
 }
+.testimonial-home{
+    background-color: #3bbd5e;
+    /* display: inline; */
+    width: 300px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 25px;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+
+}
+/* #288140 */
+.testimonial-home:hover{
+    background-color: #36a553;
+}
+
+.course_icon{
+    background-color: #1976D2;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* margin-left: 15px; */
+}
+
+.course_outer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    width: 100px;
+    height: 80px;
+    margin-left: 30px;
+    /* border: 1px solid red; */
+    cursor: pointer;
+}
+.border{
+    border-bottom: 2px solid #1976D2;
+    /* padding: 5px 10px; */
+}
+.d-none{
+    display: none;
+}
+
+.course-2{
+    border: 1px solid rgb(243, 243, 243);
+}
